# glacier-welcome

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  welcome.cpp  welcome.h
src/qml/: glacier-welcome.qml  glacier-welcome.qrc
src/qml/components/: SayMeHello.qml
src/qml/pages/: DateTimePage.qml  SelectLanguagePage.qml  WelcomePage.qml
